--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <a href="/item_page.html">See all<i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="img_container" id="autum_selection_img">
-          <a href="#" data-name="Autumn Blend" data-price="$12"><img src="/img/2455.webp"></a>
-          <a href="#" data-name="Spiced Chai" data-price="$15"><img src="/img/2470.webp"></a>
-          <a href="#" data-name="Pumpkin Tea" data-price="$18"><img src="/img/2634.webp"></a>
-          <a href="#" data-name="Maple Delight" data-price="$20"><img src="/img/3811.webp"></a>
+          <a href="#" data-name="Autumn Blend" data-price="$12"><img src="img/2455.webp"></a>
+          <a href="#" data-name="Spiced Chai" data-price="$15"><img src="img/2470.webp"></a>
+          <a href="#" data-name="Pumpkin Tea" data-price="$18"><img src="img/2634.webp"></a>
+          <a href="#" data-name="Maple Delight" data-price="$20"><img src="img/3811.webp"></a>
       </div>
     </div>
 
