--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/20dffc9a4f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/nav.css">
-    <script src="/nav.js" defer></script>
-    <script src="/app.js" defer></script>
+    <link rel="stylesheet" href="nav.css">
+    <script src="nav.js" defer></script>
+    <script src="app.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Oranienbaum&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
         <div class="cta">
             <!-- change this every 4sec and make 2 of them using JS -->
             <div class="cta_container">
-                <a href="/item_page.html">Discover</a>
+                <a href="item_page.html">Discover</a>
             </div>
             <div class="hero_subtitle">A World of Sweetness</div>
         </div>
@@ -44,7 +44,7 @@
     <div class="highlight_product">
         <div class="highlight_nav">
             <span class="category">Autumn Selection</span>
-            <a href="/item_page.html">See all<i class="fa-solid fa-arrow-right"></i></a>
+            <a href="item_page.html">See all<i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="img_container" id="autum_selection_img">
           <a href="#" data-name="Autumn Blend" data-price="$12"><img src="img/2455.webp"></a>
@@ -56,16 +56,16 @@
 
     <!-- Javascript listing to make mouse hover and show item images  -->
      <div class="listing_container">
-        <div class="listing_item" id="flavored" data-image="/img/cursor/flavored.webp" data-href="/item_page.html">
+        <div class="listing_item" id="flavored" data-image="img/cursor/flavored.webp" data-href="/item_page.html">
             <span>Our Flavored Tea</span>
         </div>
-        <div class="listing_item" id="flavored" data-image="/img/cursor/Sous-Categorie_Boites_125g_12036_R_S.webp" data-href="/item_page.html">
+        <div class="listing_item" id="flavored" data-image="img/cursor/Sous-Categorie_Boites_125g_12036_R_S.webp" data-href="/item_page.html">
             <span>Grands Crus & Rare Teas</span>
         </div>
-        <div class="listing_item" id="flavored" data-image="/img/cursor/2871.webp" data-href="/item_page.html">
+        <div class="listing_item" id="flavored" data-image="img/cursor/2871.webp" data-href="/item_page.html">
             <span>The Iconic Ones</span>
         </div>
-        <div class="listing_item" id="flavored" data-image="/img/cursor/christmas.webp" data-href="/item_page.html">
+        <div class="listing_item" id="flavored" data-image="img/cursor/christmas.webp" data-href="/item_page.html">
             <span>The Art of Tea</span>
         </div>
      </div>
@@ -77,7 +77,7 @@
             </div>
             <a href="/item_page.html">Discover</a>
         </div>
-        <img src="/img/3_ef0652e2-c2c6-429e-ae7e-8aa2d526aa43.webp">
+        <img src="img/3_ef0652e2-c2c6-429e-ae7e-8aa2d526aa43.webp">
      </div>
 
      <!-- Bestseller item listing -->
@@ -87,12 +87,12 @@
             <a href="/item_page.html">Discover <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="best_seller_items">
-            <a href="#"><img src="/img/1751.webp"></a>
-            <a href="#"><img src="/img/2835.webp"></a>
-            <a href="#"><img src="/img/1661.webp"></a>
-            <a href="#"><img src="/img/SD-boite_de_Noel_2025_-_ouverte.webp"></a>
-            <a href="#"><img src="/img/1677.webp"></a>
-            <a href="#"><img src="/img/1693.webp"></a>
+            <a href="#"><img src="img/1751.webp"></a>
+            <a href="#"><img src="img/2835.webp"></a>
+            <a href="#"><img src="img/1661.webp"></a>
+            <a href="#"><img src="img/SD-boite_de_Noel_2025_-_ouverte.webp"></a>
+            <a href="#"><img src="img/1677.webp"></a>
+            <a href="#"><img src="img/1693.webp"></a>
         </div>
       </div>
 
