--- a/nav.html
+++ b/nav.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/nav.css">
-  <script src="/nav.js" defer></script>
+  <link rel="stylesheet" href="nav.css">
+  <script src="nav.js" defer></script>
 </head>
 
 <body>
 <nav class="site-nav"  aria-label="Main">
   <ul class="nav" id="top-nav">
-    <div class="logo"><a  href="/index.html"> asd</a></div>
+    <div class="logo"><a  href="index.html"> asd</a></div>
     <li class="nav-btn" id="nav_1_btn" aria-controls="menu1">Teas</li>
     <li class="nav-btn" id="nav_2_btn" aria-controls="menu2">Our Original Teas</li>
     <li class="nav-btn" id="nav_3_btn" aria-controls="menu3">Boxs & Bags</li>
