--- a/item_page.html
+++ b/item_page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/20dffc9a4f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/item_pg.css">
-    <link rel="stylesheet" href="/nav.css">
+    <link rel="stylesheet" href="item_pg.css">
+    <link rel="stylesheet" href="nav.css">
     <script src="nav.js" defer></script>
    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
