--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script>
   class SiteNav extends HTMLElement {
     async connectedCallback() {
-      const html = await (await fetch('/nav.html')).text();
+      const html = await (await fetch('nav.html')).text();
       this.innerHTML = html;
     }
   }
